badcompilation.log
jsbien@JSBbookworm:~/git/djvu2mask/tools$ cd ..
jsbien@JSBbookworm:~/git/djvu2mask$ make
make  all-recursive
make[1]: Entering directory '/home/jsbien/git/djvu2mask'
Making all in libdjvu
make[2]: Entering directory '/home/jsbien/git/djvu2mask/libdjvu'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/jsbien/git/djvu2mask/libdjvu'
Making all in tools
make[2]: Entering directory '/home/jsbien/git/djvu2mask/tools'
  CXX      ddjvu-ddjvu.o
ddjvu.cpp:328:8: error: invalid preprocessing directive #style
  328 | #      style = DDJVU_FORMAT_GREY8;
      |        ^~~~~
ddjvu.cpp:329:17: error: missing binary operator before token "prect"
  329 | #      if ((int)prect.w == iw && (int)prect.h == ih)
      |                 ^~~~~
ddjvu.cpp:329: error: unterminated #if
  329 | #      if ((int)prect.w == iw && (int)prect.h == ih)
      | 
ddjvu.cpp: In function ‘void render(ddjvu_page_t*, int)’:
ddjvu.cpp:326:7: warning: this ‘else’ clause does not guard... [-Wmisleading-indentation]
  326 |       else
      |       ^~~~
ddjvu.cpp:327:36: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  327 |         style = DDJVU_FORMAT_GREY8;
      |                                    ^
ddjvu.cpp:327:36: error: expected ‘}’ at end of input
ddjvu.cpp:323:5: note: to match this ‘{’
  323 |     {
      |     ^
ddjvu.cpp:327:36: error: expected ‘}’ at end of input
  327 |         style = DDJVU_FORMAT_GREY8;
      |                                    ^
ddjvu.cpp:236:1: note: to match this ‘{’
  236 | {
      | ^
ddjvu.cpp:241:19: warning: unused variable ‘fmt’ [-Wunused-variable]
  241 |   ddjvu_format_t *fmt;
      |                   ^~~
ddjvu.cpp:246:9: warning: unused variable ‘image’ [-Wunused-variable]
  246 |   char *image = 0;
      |         ^~~~~
ddjvu.cpp:247:8: warning: unused variable ‘white’ [-Wunused-variable]
  247 |   char white = (char)0xFF;
      |        ^~~~~
ddjvu.cpp:248:7: warning: unused variable ‘rowsize’ [-Wunused-variable]
  248 |   int rowsize;
      |       ^~~~~~~
ddjvu.cpp:250:7: warning: unused variable ‘compression’ [-Wunused-variable]
  250 |   int compression = COMPRESSION_NONE;
      |       ^~~~~~~~~~~
make[2]: *** [Makefile:547: ddjvu-ddjvu.o] Error 1
make[2]: Leaving directory '/home/jsbien/git/djvu2mask/tools'
make[1]: *** [Makefile:431: all-recursive] Error 1
make[1]: Leaving directory '/home/jsbien/git/djvu2mask'
make: *** [Makefile:363: all] Error 2
jsbien@JSBbookworm:~/git/djvu2mask$ 